<resources>
    <string name="app_name">VolunteerForSudan</string>
    <string name="main_title">Welcome to Volunteer For Sudan</string>
    <string name="main_et_email_hint">Enter Email</string>
    <string name="main_et_password_hint">Enter Password</string>
    <string name="main_btn_login">Login</string>
    <string name="main_tv_createNewAccount">Create New Account</string>
    <string name="main_tv_or">or</string>
    <string name="main_tv_continueAsGuest">Continue as a guest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usertype_Title">Create Account For</string>
    <string name="usertype_btn">Back</string>
    <string name="personInfo_tv_title">Personal Information</string>
    <string name="personInfo_et_first_name">Enter First Name</string>
    <string name="personInfo_et_last_name">Enter Last Name</string>
    <string name="personInfo_rb_male">Male</string>
    <string name="personInfo_rb_female">Female</string>
    <string name="gender_label">Select Gender</string>
    <string name="next_btn">Next</string>
    <string name="emptyFields">Please fill all Fields</string>
    <string name="account_title">Account Information</string>
    <string name="et_phoneNumber">Enter Phone number</string>
    <string name="main_et_password_confirm_hint">Confirm Password</string>
    <string name="btn_continue_to_app">Continue to the app</string>
    <string name="doesnt_match">Passwords don\'t match</string>
    <string name="upload_id_label">Choose and Upload ID photo</string>
    <string name="upload_label">Click to Upload</string>
    <string name="main_et_national_number">Enter The National Nuber</string>
    <string name="capture_btn">Capture</string>
    <string name="password_title">Congratulations \nSet up your password</string>
    <string name="license_cb_text">I have read the license and Accept it</string>
    <string name="license_title">License</string>
    <string name="upload_et_amount_hint">Enter the Amount</string>
    <string name="upload_et_desc_hint">Enter Description</string>
    <string name="upload_et_location_hint">Location</string>
    <string name="upload_et_location_text">Location will be detected atomatocally</string>
    <string name="upload_request">Upload Request</string>
    <string name="custom_cont_tv_amount">286/1500</string>
    <string name="request_tv_volunteer">Volunteer Name</string>
    <string name="donate_tv_account_label">Payment Information</string>
    <string name="donate_tv_account_number">865456789</string>
    <string name="donate_tv_upload">Click to Uploud Payment Picture</string>
    <string name="donate_tv_explain">Please Upload payment after you donate this helps the volunteer and save him from counting payments.</string>
    <string name="upload_payment">Send Payment</string>
</resources>